@@ -84,6 +84,9 @@ C-API
 Library
 -------
 
+- Issue #7372: Fix pstats regression when stripping paths from profile
+  data generated with the profile module.
+
 - Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
   entries, consider the first one.
 
